	* Added "getExtension" method in Directory_local_backend to provide better compatibility with the File backend.
	* Added logging for mimetype icons that don't exist on the system yet, (for DEVELOPMENT_MODE only).
	* Greatly optimized the copyFrom logic on local files.  Now instead of reading the entire file in memory, only up
	to 10MB of a file is read/written at a time.

Core Plus 2.3.2
	* Set the FormPageParentSelectInput value to be strtolower all the time.  Should fix many of the baseurl and parenturl issues.
	* Added FilterForm system; allows for filters to be created and utilized.
	* Fixed the FormPageMeta form for page template lookup.  It was trying to use directories as files.
	* Added a resetLink method in the Model.  Useful for deleting a child and not wanting them to come back as linked.
	* Updated the title/seotitle feature (Feature #194) to make use of a dedicated variable.
	* Fixed the PageModel being set from a pageMetas object.  The meta tags were not coming over correctly because the name
	was changed slightly.
	* Added the input ID as the containing div's class name on formcheckboxesinput.
	* Updated the compiler to set only the relative path for the comments instead of the full path.
	* Switched the updater listing from NUMERIC sort to NATURAL sort.  This fixes the order of versions.
	* Fixed the input value being terminated after double quotes.  Resolution was replace the '/"' with '&quot;'.
	-- Charlie Powell <charlie@eval.bz>  16 Nov 2012

Core Plus 2.3.1

	* Fixed a bug with the parent page selection not selecting the correct parent page.
	* Updated the core.strings.js a little to prevent URLs from being crafted with two slashes next to each other.
	* Updated the smarty a block to ignore blank confirm requests.
	-- Charlie Powell <charlie@eval.bz>  5 Nov 2012

Core Plus 2.3.0

	* Major change in the dataset WHERE structure.  Where statements now support nested clauses, each with their own
	separator and children.